# libsercli

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  InetSocketServerExample.cpp
include/libsercli/: ClientBuilder.h  IClient.h  IServer.h  ServerBuilder.h
include/sercli/: ClientBuilder.h  IClient.h  IServer.h  ServerBuilder.h
src/: ClientBuilder.cpp  Constants.h  Macros.h  ServerBuilder.cpp  SmartSocket.cpp  SmartSocket.h  SocketBuilder.cpp  SocketBuilder.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h
tests/: CMakeLists.txt
tests/component/: CMakeLists.txt  ClientTest.cpp  ServerTest.cpp
tests/component/cpp-utils/: CMakeLists.txt
tests/component/cpp-utils/include/cpp-utils/: StringHelper.h
tests/component/cpp-utils/src/: StringHelper.cpp
tests/component/handshake/: CMakeLists.txt  HandshakeTest.cpp
tests/component/interactive/: CMakeLists.txt  ClientTest.cpp  ServerTest.cpp
tests/component/interactive/cpp-utils/include/cpp-utils/: StringHelper.h
tests/component/interactive/cpp-utils/src/: StringHelper.cpp
tests/component/interactive/utils/: CMakeLists.txt
tests/component/interactive/utils/include/: CommandHelper.h
tests/component/interactive/utils/src/: CommandHelper.cpp
tests/component/interactive/utils/tests/: CMakeLists.txt
tests/component/interactive/utils/tests/unit/: CMakeLists.txt  CommandHelperTest.cpp
tools/: apply-clang-format.sh  apply-cppcheck.sh
